catch some weird exceptions,  added to many debug outputs